WTPlanner/force-app/main/default/objects/Session__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Details about this session including what staff will be doing</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>