WTPlanner/force-app/main/default/objects/Session__c/fields/Is_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Is_Frozen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this session is locked and staff cannot claim or drop shifts</description>
    <label>Is Frozen</label>
    <type>Checkbox</type>
</CustomField>