WTPlanner/force-app/main/default/objects/Session__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Physical location or area where this session takes place</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>