WTPlanner/force-app/main/default/objects/Session__c/fields/Max_Shifts__c.field-meta.xml
<CustomField>
    <fullName>Max_Shifts__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Maximum number of staff shifts allowed per time slot for this session</description>
    <label>Max Shifts Allowed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>