WTPlanner/force-app/main/default/objects/Session__c/fields/Min_Shifts__c.field-meta.xml
<CustomField>
    <fullName>Min_Shifts__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Minimum number of staff shifts required per time slot for this session</description>
    <label>Min Shifts Needed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>