WTPlanner/force-app/main/default/objects/Session__c/fields/session_owner__c.field-meta.xml
<CustomField>
    <fullName>session_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Owner of the Session</description>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>