WTPlanner/force-app/main/default/objects/Session__c/fields/Session_Type__c.field-meta.xml
<CustomField>
    <fullName>Session_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The category or type of session (e.g., Booth, Theatre, Trailhead)</description>
    <label>Session Type</label>
    <referenceTo>Session_Type__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>