WTPlanner/force-app/main/default/objects/Session__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>Ideal skills or qualifications for staffing this session (e.g. Marketing Cloud expertise, public speaking, demo skills)</description>
    <label>Recommended Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>