WTPlanner/force-app/main/default/objects/Session__c/listViews/All_Sessions.listView-meta.xml
<ListView>
    <fullName>All_Sessions</fullName>
    <columns>NAME</columns>
    <columns>Session_Type__c</columns>
    <columns>Location__c</columns>
    <columns>Min_Shifts__c</columns>
    <columns>Max_Shifts__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Sessions</label>
</ListView>